--- a/ColdCallsTracker/ColdCallsTracker/Pages/QuoteTemplates/Index.cshtml
+++ b/ColdCallsTracker/ColdCallsTracker/Pages/QuoteTemplates/Index.cshtml
@@ -18,7 +18,8 @@
         $(function () {
             $('table').DataTable({
                 language: { "url": "https://cdn.datatables.net/plug-ins/1.10.19/i18n/Russian.json" },
-                paging: false
+                paging: false,
+                "order": [[ 1, "desc" ]]
             });
         })
     </script>
