--- a/ColdCallsTracker/ColdCallsTracker/Pages/CallScripts/Index.cshtml
+++ b/ColdCallsTracker/ColdCallsTracker/Pages/CallScripts/Index.cshtml
@@ -56,7 +56,7 @@
                         <a href="/CallScripts/Edit/@(item.Id)" class="btn btn-success btn-xs edit-btn">
                             <i class="fas fa-edit"></i>
                         </a>
-                        <a onclick="window.utils.doIfConfirm(this);" href="/CallScripts/Delete/@(item.Id)" class="btn btn-danger btn-xs delete-btn">
+                        <a onclick="window.utils.doIfConfirm(this);" href="/CallScripts/DeleteScript/@(item.Id)" class="btn btn-danger btn-xs delete-btn">
                             <i class="fas fa-trash"></i>
                         </a>
                     </td>
