убрал связь с состояниями

--- a/ColdCallsTracker/ColdCallsTracker/Pages/Companies/Edit.cshtml
+++ b/ColdCallsTracker/ColdCallsTracker/Pages/Companies/Edit.cshtml
@@ -70,6 +70,7 @@
                             <option value="1">В процессе</option>
                             <option value="2">Успех</option>
                             <option value="3">Отказ</option>
+                            <option value="4">Не подходит</option>
                         </select>
                     </div>
 
