--- a/ColdCallsTracker/ColdCallsTracker/Pages/Companies/Edit.cshtml
+++ b/ColdCallsTracker/ColdCallsTracker/Pages/Companies/Edit.cshtml
@@ -107,6 +107,10 @@
                                 </select>
                             </div>
                             <div class="phoens-management">
+                                <span v-bind:class="{ 'disabled' : entity.Phones.length === 0 }" v-on:click="copyPhone" class="btn btn-warning btn-sm mr-3">
+                                    <i class="fas fa-copy"></i>
+                                    Копировать номер
+                                </span>
                                 <span v-bind:class="{ 'disabled' : entity.Phones.length === 0 }" v-on:click="editPhone" class="btn btn-success btn-sm">
                                     <i class="fas fa-edit"></i>
                                     Редактировать
