--- a/ColdCallsTracker/ColdCallsTracker/Pages/Companies/Edit.cshtml
+++ b/ColdCallsTracker/ColdCallsTracker/Pages/Companies/Edit.cshtml
@@ -111,6 +111,10 @@
                                     <i class="fas fa-copy"></i>
                                     Копировать номер
                                 </span>
+                                <a v-bind:class="{ 'disabled' : entity.Phones.length === 0 }" v-bind:href="callToNumber" class="btn btn-dark btn-sm mr-3">
+                                    <i class="fas fa-phone"></i>
+                                    Позвонить
+                                </a>
                                 <span v-bind:class="{ 'disabled' : entity.Phones.length === 0 }" v-on:click="editPhone" class="btn btn-success btn-sm">
                                     <i class="fas fa-edit"></i>
                                     Редактировать
