DateModify update fix

--- a/ColdCallsTracker/ColdCallsTracker/Pages/CostingTemplates/Index.cshtml
+++ b/ColdCallsTracker/ColdCallsTracker/Pages/CostingTemplates/Index.cshtml
@@ -22,7 +22,7 @@
 
     <div class="row">
         <div class="col">
-            <h1>Шаблоны затрат</h1>
+            <h1>Затраты</h1>
         </div>
         <div class="col">
             <span v-on:click="addItem()" class="btn btn-success btn-sm float-right mt-3">
