--- a/ColdCallsTracker/ColdCallsTracker/Pages/QuoteTemplates/Edit.cshtml
+++ b/ColdCallsTracker/ColdCallsTracker/Pages/QuoteTemplates/Edit.cshtml
@@ -21,7 +21,7 @@
 
     <div class="row">
         <div class="col">
-            <h1>Редактирование шаблона</h1>
+            <h1>Редактирование шаблона предложения</h1>
         </div>
     </div>
 
