--- a/ColdCallsTracker/ColdCallsTracker/Pages/QuoteTemplates/Edit.cshtml
+++ b/ColdCallsTracker/ColdCallsTracker/Pages/QuoteTemplates/Edit.cshtml
@@ -107,7 +107,7 @@
                     <td colspan="3">
                         <label class="form-check-label ml-4">
                             <input v-model="CustomDesign" type="checkbox" class="form-check-input">
-                            Индивидуальный дизайн
+                             дизайн
                         </label>
                     </td>
                     <td colspan="5">
