--- a/ColdCallsTracker/ColdCallsTracker/Pages/QuoteTemplates/Edit.cshtml
+++ b/ColdCallsTracker/ColdCallsTracker/Pages/QuoteTemplates/Edit.cshtml
@@ -107,11 +107,11 @@
                     <td colspan="3">
                         <label class="form-check-label ml-4">
                             <input v-model="CustomDesign" type="checkbox" class="form-check-input">
-                             дизайн
+                             Доп работы
                         </label>
                     </td>
                     <td colspan="5">
-                        От стоимости UI: @(GlobalVariables.CustomDesignMarkup * 100) %
+                        От стоимости UI: @(GlobalVariables.ExtraMarkup * 100) %
                     </td>
                     <td>
                         <strong>{{ CustomDesignTotal.toFixed(0) }}</strong>
