--- a/ColdCallsTracker/ColdCallsTracker/Pages/QuoteTemplates/Index.cshtml
+++ b/ColdCallsTracker/ColdCallsTracker/Pages/QuoteTemplates/Index.cshtml
@@ -44,7 +44,7 @@
             <tr>
                 <th class="id">#</th>
                 <th>Название</th>
-                <th class="custom-design">Инд. дизайн</th>
+                <th class="custom-design">Доп работы</th>
                 <th data-s-type="num-fmt" class="total">Цена</th>
                 <th class="actions">Действия</th>
             </tr>
