--- a/ColdCallsTracker/ColdCallsTracker/Pages/Companies/Edit.cshtml
+++ b/ColdCallsTracker/ColdCallsTracker/Pages/Companies/Edit.cshtml
@@ -333,11 +333,11 @@
                                     <td colspan="3">
                                         <label class="form-check-label ml-4">
                                             <input type="checkbox" v-model="quote.CustomDesign" v-on:change="designChanged(quote)" class="form-check-input">
-                                            дизайн
+                                            Доп работы
                                         </label>
                                     </td>
                                     <td colspan="5">
-                                        От стоимости UI: @(GlobalVariables.CustomDesignMarkup * 100) %
+                                        От стоимости UI: @(GlobalVariables.ExtraMarkup * 100) %
                                     </td>
                                     <td>
                                         {{ quote.CustomDesignTotalHrs }} ч.
